@@ -51,7 +51,9 @@ Additions: \
 &plus; `"debug.createbigcannons.block_hardness": "Block Hardness: "` \
 &plus; `"debug.createbigcannons.block_toughness": "Block Toughness: "` \
 &plus; `"item.createbigcannons.block_armor_inspection_tool": "Block Armor Inspection Tool"` \
-&plus; `"createbigcannons.subtitle.shell_flying": "Incoming artillery shell"`
+&plus; `"createbigcannons.subtitle.shell_flying": "Incoming artillery shell"` \
+&plus; `"createbigcannons.subtitle.autocannon_round_flyby": "Autocannon round flies by"` \
+&plus; `"createbigcannons.subtitle.machine_gun_round_flyby": "Machine gun round flies by"`
 
 Key Changes: \
 `"item.createbigcannons.delayed_impact_fuze.tooltip.shell_info"` → `"item.createbigcannons.delayed_impact_fuze.tooltip.shell_info.chance"` \
