@@ -183,7 +183,7 @@ a21c4e4eebeff2daf1f081cd6226f29adfeade7c data\createbigcannons\loot_tables\block
 235661158f753902ef6973695297617954ce8c74 assets\createbigcannons\blockstates\creative_autocannon_ammo_container.json
 9ea4762a05a584971ebbabbe4aed59f2d83cfca5 data\createbigcannons\recipes\melting\melt_cast_iron_ingot.json
 f606cce56a47d59c2633a8aa927664ca33c0fd81 data\createbigcannons\loot_tables\blocks\unbored_bronze_sliding_breech.json
-36fdad5af4eb7dc0b509218b190601e4e30816fe assets\createbigcannons\lang\en_us.json
+ec92f11916aeea5762c1f8415fe50e85a01875ea assets\createbigcannons\lang\en_us.json
 ed30fb599beda650e7c03f73f81740f575878072 data\createbigcannons\advancements\recipes\createbigcannons\nethersteel_block.json
 dec72a3d3bdf8f0783b06a066ce558fd44a46878 assets\createbigcannons\models\block\unbored_nethersteel_screw_breech.json
 020c4503bc250b1d631c454763e13240290a257a assets\createbigcannons\models\block\unbored_cast_iron_sliding_breech.json
@@ -372,7 +372,7 @@ bc887982390ad450c9924b6b072b793018e89ffd data\createbigcannons\tags\items\gunpow
 5ddd76a06525dbe65e687e40426392fa0ed69c08 assets\createbigcannons\models\block\cannon_cast.json
 2975e49c94758d2f84a1a2019fbe577db1e3d630 assets\createbigcannons\models\item\sliding_breech_cast_mould.json
 0ef027e38fb552bd7a69c22e7bf238c0052b491d assets\createbigcannons\models\block\wrought_iron_drop_mortar_end.json
-039c1a567f56d7a180ac5387b15f945cc3d35588 assets\createbigcannons\lang\en_ud.json
+2fafcecb7526aad8c3e8bf02b99e974e5f394264 assets\createbigcannons\lang\en_ud.json
 7fa5065e32210f792d1daad2d7268247904f6252 data\minecraft\tags\blocks\mineable\axe.json
 847dd1470953cd5956b5f6edb733cdb0bafddd3c assets\createbigcannons\models\block\incomplete_bronze_autocannon_recoil_spring.json
 236281fc879d0281e93d7a9b4f7fadfbed3c31b7 data\createbigcannons\recipes\wrought_iron_cannon_end.json
@@ -854,7 +854,7 @@ a2c945cfcfe8f029499256a96e25282e6ee0398c assets\createbigcannons\models\block\th
 9a76c8921bf64c236be528a6d6b1e064d303ee3e data\createbigcannons\recipes\cutting\autocannon_recoil_spring_cast_mould.json
 3e3c2067b3239f8e0298485297cd2a676bea733d data\createbigcannons\loot_tables\blocks\bronze_cannon_chamber.json
 3f1377b275040072f59fcc4a8983d498f29bb5e3 assets\createbigcannons\models\item\steel_autocannon_breech.json
-c7b03cfbe1a8771f59dac3ec596da9a27df3619a assets\createbigcannons\sounds.json
+4198145958d4cc947702f92154011326047d3602 assets\createbigcannons\sounds.json
 a2ae0623c808d6b5f5fcd7e31d489ae149e9fb42 data\createbigcannons\loot_tables\boring_scrap\unbored_large_nethersteel_cannon_layer.json
 393bd4e2b8cf5e4970343ffd9bc1f9c9db9ec9b8 data\c\tags\items\ingots\cast_iron.json
 46aefbb145aee7ad4ac0480df9e11cf1c268dca7 data\createbigcannons\recipes\cutting\autocannon_cartridge_sheet_copper.json
