@@ -87,6 +87,7 @@ Added:
 - Added air absorption and delay to cannon sounds
  - Delay is configurable
 - Added shell flight and falling sounds for big cannon projectiles
+- Added flyby sounds for autocannon and machine gun projectiles
 Removed:
 - Removed legacy cannon plume appearance client config, can now only turn plumes on or off in clientside config
 - Removed single-projectile shrapnel, grapeshot, and fluid blob entities
